2010-10-06  Nandan Athawale <nandan.athawale@gmail.com>
	* device-src/s3.c: replaced deprecated functions g_strncasecmp
	  and g_strcasecmp with g_ascii_strncasecmp and g_ascii_strcasecmp.
2010-10-05  Dustin J. Mitchell <dustin@zmanda.com>
	* man/entities/global.entities.in: better formatting for config
	  overrides
	* man/xml-source/amvault.8.xml: better synopsis formatting
	* server-src/amvault.pl: better synopsis formatting

2010-10-05  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Logfile.swg: don't produce negative durations
	* perl/Amanda/DB/Catalog.pm: but handle them when they occur

2010-10-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Correctly print "Level:#".

2010-10-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Use last_level to compute the bump level.

2010-10-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fix memory allocation.

2010-10-04  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amidxtaped.pl: exact match for same-host, allow dumps
	  that are not in the disklist
	* server-src/amindexd.c: fix trivially permissive same-host

2010-10-04  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/amxml.c: set the correct fields (encryption or
	  compression)
	* server-src/dumper.c: strdup strings so they are not gone after
	  free_dle

2010-10-04  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Report.pm: fix autovivification bug
	* perl/Amanda/Report/human.pm: detect re-flushing; fix a lot of 
	  undefined's

2010-10-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Add a 'return' for every usage() call.
	  Add step in main.

2010-10-01  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amvault.8.xml: mention that DLE splitting parameters
	  are ignored by amvault
	* server-src/amvault.pl: use tapetype parameters for splitting
	* perl/Amanda/Taper/Scribe.pm: support splitting parameters straight