@@ -517,22 +517,13 @@ dvdrw_device_finish(Device *dself)
     /* Save access mode before parent class messes with it */
     mode = dself->access_mode;
 
-    if (device_in_error(dself)) {
-	if (mode == ACCESS_READ) {
-	    /* Still need to do this, don't care if it works or not */
-	    unmount_disc(self);
-	}
-
-	return FALSE;
-    }
-
     result = parent_class->finish(dself);
 
     if (mode == ACCESS_READ) {
 	unmount_disc(self);
     }
 
-    if (! result) {
+    if (!result || device_in_error(dself)) {
 	return FALSE;
     }
 
